# scroogebot

./: .env.example  .gitignore  ANALISIS_INICIAL.md  ARCHITECTURE.md  BRIEFING.md  CHANGELOG.md  CLAUDE.md  FUTURE.md  GLOSARIO.md  GUIA_INICIO.md  GUIA_INTERMEDIO.md  Makefile  QUICKSTART.md  README.md  TOMORROW.md  USER_MANUAL.md  pyproject.toml  scroogebot.py  scroogebot.service
config/: config.yaml  logging.yaml
docs/: DOCUMENTATION_PROMPT_EN.md  HOW-TO-ADD-STRATEGY.md  HOW-TO-DEPLOY.md  investing-strategies-guide.md  mercado-espanol-productos-fiscalidad.md
docs/plans/: 2026-02-21-part1-scaffold-data-orders.md  2026-02-21-part2-strategies-alerts-roles.md  2026-02-21-part3-backtest-advanced.md  2026-02-21-scroogebot-design.md  2026-02-21-scroogebot-implementation.md  2026-02-21-sizing-design.md  2026-02-21-sizing-implementation.md  2026-02-22-basket-admin-design.md  2026-02-22-buscar-design.md  2026-02-22-buscar-implementation.md  2026-02-22-guia-inicio-design.md  2026-02-22-help-command-design.md  2026-02-22-help-command-implementation.md  (+8 more)
src/: config.py  metrics.py
src/alerts/: engine.py  (+1 more)
tests/: test_alert_engine_stoploss.py  test_alert_explanation.py  test_analysis_handler.py  test_backtest_engine.py  test_backtest_handler.py  test_basket_admin.py  test_bot_callback.py  test_cesta_handler.py  test_config.py  test_data.py  test_market_context.py  test_market_hours.py  test_montecarlo.py  test_montecarlo_handler.py  test_normalize.py  test_orders.py  test_orders_handler.py  test_search.py  test_sel.py  test_sizing.py  test_sizing_handler.py  test_strategies.py
(+48 files in other folders)
